--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <title>Images and Positioning Activity</title>
 </head>
 <body>
-<h1>Chapter 1</h1>
-<h2> <a href="toc.html"> Table of Contents </a></h2>
+<h1> Web Entrepreneurs </h1>
+</body>
