--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Images and Positioning Activity</title>
+<link rel = "stylesheet" href= "exam.css">
 </head>
 <body>
 <h1> Web Entrepreneurs </h1>
