--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-<title>Images and Positioning Activity</title>
-<link rel = "stylesheet" href= "exam.css">
-</head>
-<body>
-<h1> Web Entrepreneurs </h1>
-</body>
+	<head>
+		<title>Images and Positioning Activity</title>
+		<link rel = "stylesheet" href= "exam.css">
+	</head>
+	<body>
+		<h1> Web Entrepreneurs </h1>
+		<p> Let Your Web Site Do Your Work</p>
+	</body>
