--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@ No, I'm not talking about titles such as Ms. or Mrs. and the like. Search engine
 				<h3> Let Your Page Inform, not Entertain </h3>
 				<p> Flash is a technology that places interesting animations on a Web page. Don't let your site have a Flash "splash page," whereby the visitor to your site has to click to first get past the Flash page in order to view your home page. Put the Flash presentations on your home page so that the user has a choice of whether or not to view the Flash presentation.
 </p>
+				<div>
+					<p class="steve"> "Your time is limited, so don't waste it living with someone else's life. Don't let the noise of others' opinions drown out your own inner  voice. And most important, have the courage to follow your heart and intution." - Steve Jobs.</p>
+				</div>
 			</div>
-			<div id="attention">
+			<div id="attention" class="heading">
 				<h3> Get Their Attention </h3>
 				<p> At the top of your page, state what your company can do for the customer. Why are you the best? Why should the customer use your services? What makes you so special? Why should the customer buy your goods or use your services? Make these reasons clear from the start and at the top. </p>
 			</div>
-			<div id="contact">
+			<div id="contact" class="heading">
 				<h3> Let's Make Contact
 </h3>
 				<p> Don't make the customer have to search for contact information. That's a great way to kill a sale, not create one. Make sure your contact information is easy to find. Have your address, phone number, fax number, e-mail address and link at the top and the bottom of every page.
  </p>
 			</div>
-			<div id="picture">
+			<div id="picture" class="heading">
 				<h3> Get the Picture </h3>
 				<p> Photos should be the right size (not more than 3 inches by 3 inches) and not be distorted. Your photos should not look like a fun house mirror. Background graphics should contrast with, not compete with, text. If you have a lot of photos, create thumbnail images (about 1 - 1 1/2 inches square) that link to larger-size images. Having the large images on separate pages means your home page will download faster. Also, pages with several large photos and little text look quite "old school" and amateurish – it looks as if you've got nothing to say, and that's the last thing you want to convey to your readers.
 </p>
