--- a/index.html
+++ b/index.html
@@ -43,5 +43,16 @@ No, I'm not talking about titles such as Ms. or Mrs. and the like. Search engine
 				<p> Photos should be the right size (not more than 3 inches by 3 inches) and not be distorted. Your photos should not look like a fun house mirror. Background graphics should contrast with, not compete with, text. If you have a lot of photos, create thumbnail images (about 1 - 1 1/2 inches square) that link to larger-size images. Having the large images on separate pages means your home page will download faster. Also, pages with several large photos and little text look quite "old school" and amateurish – it looks as if you've got nothing to say, and that's the last thing you want to convey to your readers.
 </p>
 			</div>
+			<div id="compete">
+				<h3> How Will You Compete?
+</h3>
+				<p> Decide early on how you will differentiate yourself from others — price, selection, expertise, market niche, uniqueness, speed of delivery, unique knowledge of the subject matter — all of these aspects are important in starting a business and staying in business. For more information, we invite you to visit our office Monday through Friday from 8 a.m. to 4 p.m.
+ </p>
+				<p> Council on Entreprneurship in the Americas </p>
+				<p> <i> 23 Butler Blvd.
+Suite 400B
+Hamilton Creek, NJ 35688
+ </i></p>
+			</div>
 		</div>
 	</body>
