--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ No, I'm not talking about titles such as Ms. or Mrs. and the like. Search engine
 </h3>
 				<p> Don't make the customer have to search for contact information. That's a great way to kill a sale, not create one. Make sure your contact information is easy to find. Have your address, phone number, fax number, e-mail address and link at the top and the bottom of every page.
  </p>
-				<div id="contactInfo>
+				<div id="contactInfo">
 					<p> Thomas A. Edison CTE High School </p>
 					<p> 165-65 84th Avenue </p>
 					<p> Jamaica, NY 111432 </p>
