--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ No, I'm not talking about titles such as Ms. or Mrs. and the like. Search engine
 			<div id="attention">
 				<h3 class="heading"> Get Their Attention </h3>
 				<p> At the top of your page, state what your company can do for the customer. Why are you the best? Why should the customer use your services? What makes you so special? Why should the customer buy your goods or use your services? Make these reasons clear from the start and at the top. </p>
-				<img src ="scanner.png">
+				<img src ="scanner.png" id="QR">
 			</div>
 			<div id="contact">
 				<h3 class="heading"> Let's Make Contact
@@ -39,7 +39,7 @@ No, I'm not talking about titles such as Ms. or Mrs. and the like. Search engine
 				<p> Don't make the customer have to search for contact information. That's a great way to kill a sale, not create one. Make sure your contact information is easy to find. Have your address, phone number, fax number, e-mail address and link at the top and the bottom of every page.
  </p>
 				<div id="contactInfo">
-					<p> Thomas A. Edison CTE High School </p>
+					<p><a href="https://www.taehs.org/" target="_blank"> Thomas A. Edison CTE High School </a></p>
 					<p> 165-65 84th Avenue </p>
 					<p> Jamaica, NY 111432 </p>
 					<br>
