--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	</head>
 	<body>
 		<h1> Web Entrepreneurs </h1>
+		<center>
 		<div id="intro">
 			<p> Let Your Web Site Do Your Work</p>
 			<p> You want to run a business out of your home or a storefront, but you need a sales and marketing plan. The Web can be your most effective, tireless 24x7 salesperson. Here are some tips to turn your Web site into an effective marketing tool:</p>
-		</div>
+		</div></center>
 		<div id="content">
 			<div id="looks">
 				<h3> Looks Matter </h3>	
