--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ No, I'm not talking about titles such as Ms. or Mrs. and the like. Search engine
 </p>
 			</div>
 			<div id="compete">
-				<h3 class-"heading"> How Will You Compete?
+				<h3 class="heading"> How Will You Compete?
 </h3>
 				<p> Decide early on how you will differentiate yourself from others — price, selection, expertise, market niche, uniqueness, speed of delivery, unique knowledge of the subject matter — all of these aspects are important in starting a business and staying in business. For more information, we invite you to visit our office Monday through Friday from 8 a.m. to 4 p.m.
  </p>
