--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ No, I'm not talking about titles such as Ms. or Mrs. and the like. Search engine
 				<h3 class="heading"> Get Their Attention </h3>
 				<p> At the top of your page, state what your company can do for the customer. Why are you the best? Why should the customer use your services? What makes you so special? Why should the customer buy your goods or use your services? Make these reasons clear from the start and at the top. </p>
 				<center>
-				<img src ="scanner.png" id="QR"> </center>
+				<img src ="scanner.png" id="QR"> 
+				<p> What is this?? </p></center>
 			</div>
 			<div id="contact">
 				<h3 class="heading"> Let's Make Contact
