--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ No, I'm not talking about titles such as Ms. or Mrs. and the like. Search engine
 					<p> 165-65 84th Avenue </p>
 					<p> Jamaica, NY 111432 </p>
 					<br>
-					<p> Shifa Rabaja </p>
+					<p> Tristan Katwaroo </p>
 				</div>
 			</div>
 			<div id="picture">
